# pyAgents

./: .gitignore  README.md  install.sh  main.py  pyproject.toml
agents/hello_world/: server_config.json  system_prompt.md
agents/modal_engine/: server_config.json  system_prompt.md
agents/modal_engine/output/: app.py
clients/: main.py
servers/modal/: pyproject.toml  server.py
servers/utils/: README.md  pyproject.toml  server.py
